# rCRUXMini

./: .Rbuildignore  .clang-format  .clangd  .gitignore  .lintr  AGENTS.md  DESCRIPTION  HACKING.md  NAMESPACE  README.md  justfile  rCRUXMini.Rproj
R/: 1_find_amplicons.R  2_search_amplicons.R  RcppExports.R  amplicon_blast.R  checkpoint.R  config.R  config_blast.R  config_general.R  config_plausible_amplicons.R  config_primer_blast.R  empty_tibble_from_spec.R  expand_multi_tax_ids.R  find_plausible_amplicon_coordinates.R  globals.R  logging.R  parse_amplicon_blast_results.R  parse_primer_blast2.R  pipeline.R  primer_blast.R  primer_blast_params.R  pull_amplicons.R  rCRUXMini-package.R  result.R  run_blastdbcmd.R  run_blastn.R  taxonomy.R  utils.R
inst/cli/: rCRUXMini.R  rCRUXMini_profiling.R  run_pipeline.R
man/: distinct_taxonomic_ranks.Rd  dot-expand_hits.Rd  dot-run_blastn.Rd  dot-validate_config_and_apply_default_params.Rd  dot-write_primers.Rd  empty_tibble_from_col_spec.Rd  expand_multi_tax_ids.Rd  parse_amplicon_blast_results.Rd  pipeline.Rd  rebind_global_logger.Rd  run_blastdbcmd.Rd  run_blastn.Rd  run_command.Rd  sys_which_or_abort.Rd  test_file_non_empty.Rd
scripts/: Cargo.toml
scripts/src/: lib.rs
scripts/src/monitor_memory/: mod.rs
src/: .gitignore  RcppExports.cpp  parse_primer_blast.cpp
tests/: testthat.R
tests/testthat/: ERR  OUT  helper.R  test-checkpoint.R  test-cli.R  test-config.R  test-empty_tibble_from_col_spec.R  test-expand_multi_tax_ids.R  test-find_plausible_amplicon_coordinates.R  test-logging.R  test-multi_primer_multi_db.R  (+6 more)
(+152 files in other folders)
