[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
jiff = "0.2.16"
rayon = "1.11.0"

[[bin]]
name = "rCRUXMini__ParseAmpliconBlast"
path = "./src/bin/parse_amplicon_blast.rs"

[[bin]]
name = "rCRUXMini__ParsePrimerBlast"
path = "./src/bin/parse_primer_blast.rs"

[[bin]]
name = "rCRUXMini__MonitorMemory"
path = "./src/bin/monitor_memory.rs"
